[project]
name = "python-jupyter-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.5",
    "isort>=6.0.1",
    "jupyter-ai[all]>=2.29.1",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
